[metadata]
name = lxd-sphinx-extensions
version = 0.0.6
author = Ruth Fuchss
author_email = ruth.fuchss@canonical.com
description = A collection of Sphinx extensions used in LXD
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/canonical/lxd-sphinx-extensions

[options]
packages =
    related-links
    youtube-links
    custom-rst-roles
python_requires = >=3.6
install_requires =
    sphinx
    requests
    beautifulsoup4
    docutils

[options.package_data]
* = _static/*
