[metadata]
name = canonical-sphinx-extensions
version = 0.0.33
author = Michael Park
author_email = michael.park@canonical.com
description = A collection of Sphinx extensions used by Canonical documentation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/canonical/canonical-sphinx-extensions

[options]
packages =
    related-links
    canonical.related-links
    youtube-links
    canonical.youtube-links
    custom-rst-roles
    canonical.custom-rst-roles
    config-options
    canonical.config-options
    terminal-output
    canonical.terminal-output
    filtered-toc
    canonical.filtered-toc
    canonical.contributor-listing
    ubuntu-images
    canonical.ubuntu-images
package_dir =
    canonical = canonical-sphinx-extensions
    = canonical-sphinx-extensions
python_requires = >=3.10
install_requires =
    sphinx
    requests
    beautifulsoup4
    docutils
    gitpython

[options.package_data]
* = _static/*
